# IR2117

./: CMakeLists.txt  README.md  arith_mean  arith_mean.cpp  aux_m.cpp  eje  estadisticos.cpp  hello.cpp  median.cp  median.cpp  mode.cpp  quadratic.cpp  sum  sum_ab.cpp  suma_max_matrix.cpp  tb3.rviz
Suma/: sum.cpp  sum_ab.cpp
cpp_activities/Estadístivos/: estadisticos.cpp  quadratic.cpp
cpp_activities/Suma/: suma_max_matrix.cpp  utils.cc
eigen_sta/: .mode.ccp.kate-swp  .mode.cpp.kate-swp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  eje  makefile  median  median.cpp  mode  mode.cpp  prueba  prueba.cpp  utils.cpp  utils.hpp
install/: local_setup.sh  setup.sh
log/: latest_build
ros2_ws/install/: local_setup.sh  setup.sh
tb3_ws/src/robot_trajectory/: CMakeLists.txt  package.xml
tb3_ws/src/robot_trajectory/install/: local_setup.sh  setup.sh  setup.zsh
tb3_ws/src/robot_trajectory/install/robot_trajectory/lib/robot_trajectory/: square  square_odom  wandering
tb3_ws/src/robot_trajectory/install/robot_trajectory/share/ament_index/resource_index/parent_prefix_path/: robot_trajectory
tb3_ws/src/robot_trajectory/install/robot_trajectory/share/robot_trajectory/: package.bash  package.sh  package.zsh
tb3_ws/src/robot_trajectory/log/: latest_build
tb3_ws/src/robot_trajectory/src/: .square.cpp.kate-swp  .wandering.cpp.kate-swp  square.cpp  square.py  square_odom.cpp  square_odom.py  wandering.cpp
tb3_ws/src/robot_trajectory/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh
tb3_ws/src/robot_trajectory/src/log/: latest_build
(+82 files in other folders)
